[package]
name = "ckb-sdk-types"
version = "0.100.0"
authors = [
    "Linfeng Qian <thewawar@gmail.com>",
    "Nervos Core Dev <dev@nervos.org>",
]
edition = "2018"
license = "MIT"
description = "ckb-cli sdk common types"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

ckb-types = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-traits = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-jsonrpc-types = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-hash = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-error = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }

[dev-dependencies]
ckb-crypto = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1", features = [
    "secp",
] }
